--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
+/[Ll]ightmap/
+/[Ll]ightmaps/
 /Assets/AssetStoreTools*
 
 # Visual Studio 2015 cache directory
@@ -32,3 +34,6 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+# Lightmap Files for Levels
+Assets/Scenes/Level 1/
